TaxtQuotesAcxiom/force-app/main/default/objects/Tax_Quote__c/Tax_Quote__c.object-meta.xml
<CustomObject>
    <label>Tax Quote</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Tax Quote Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>