TaxtQuotesAcxiom/force-app/main/default/objects/Tax_Quote__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>Ship To City</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>