TaxtQuotesAcxiom/force-app/main/default/objects/Tax_Quote__c/fields/Clients__c.field-meta.xml
<CustomField>
    <fullName>Clients__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tax Quotes</relationshipLabel>
    <relationshipName>Tax_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>