TaxtQuotesAcxiom/force-app/main/default/objects/Tax_Quote__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <defaultValue>&quot;US&quot;</defaultValue>
    <label>Ship To Country</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>