TaxtQuotesAcxiom/force-app/main/default/objects/Tax_Quote__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <defaultValue>&quot;C0001&quot;</defaultValue>
    <label>Division</label>
    <length>20</length>
    <type>Text</type>
</CustomField>