TaxtQuotesAcxiom/force-app/main/default/objects/Tax_Quote__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Tax Quotes</relationshipLabel>
    <relationshipName>Tax_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>