TaxtQuotesAcxiom/force-app/main/default/objects/Tax_Quote__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>Ship To Street</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>