TaxtQuotesAcxiom/force-app/main/default/objects/Tax_Quote__c/recordTypes/Tax_Quote.recordType-meta.xml
<RecordType>
    <fullName>Tax_Quote</fullName>
    <active>true</active>
    <label>Tax Quote</label>
</RecordType>