TaxtQuotesAcxiom/force-app/main/default/objects/Tax_Quote__c/validationRules/Client_Name_or_Client_should_be_filled.validationRule-meta.xml
<ValidationRule>
    <fullName>Client_Name_or_Client_should_be_filled</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 (ISBLANK( Client_Name__c ) ), 
 (ISBLANK(  Clients__c ) )
)</errorConditionFormula>
    <errorMessage>Client or Client Name should be filled</errorMessage>
</ValidationRule>