TaxtQuotesAcxiom/force-app/main/default/objects/Tax_Quote__c/validationRules/Opportunity_Name_or_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Name_or_Opportunity</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 (ISBLANK( Opportunity_Name__c ) ), 
 (ISBLANK( Opportunity__c ) )
)</errorConditionFormula>
    <errorMessage>Opportunity or Opportunity Name should be filled</errorMessage>
</ValidationRule>