TaxtQuotesAcxiom/force-app/main/default/objects/Tax_Quote__c/validationRules/Zip_code_format.validationRule-meta.xml
<ValidationRule>
    <fullName>Zip_code_format</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(REGEX(Zip_Code__c , &quot;\\d{5}(-\\d{4})?&quot;))</errorConditionFormula>
    <errorMessage>Zip code must be in the &quot;99999&quot; or &quot;99999-9999&quot; format.</errorMessage>
</ValidationRule>